--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = Net-IPAddress-Minimal
-version = 0.04
+version = 0.05
 author  =  Tamir Lousky <tlousky@cpan.org>
 author  =  Sawyer X <xsawyerx@cpan.org>
 license = Perl_5
@@ -19,4 +19,4 @@ copyright_holder = Tamir Lousky
 [CompileTests]
 [PkgVersion]
 [Repository]
-
+repository = http://github.com/Tlousky/net-ipaddress-minimal
